--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,7 @@ services:
     repo: https://github.com/langflow-ai/langflow
     branch: main
     healthCheckPath: /health
+    region: virginia
     autoDeploy: false
     envVars:
       - key: LANGFLOW_DATABASE_URL
@@ -16,3 +17,4 @@ services:
     disk:
       name: langflow-data
       mountPath: /home/user/.cache/langflow
+      sizeGB: 1
